# -duck-lox-

./: .fuse_hidden0002e5d000000110  .gitignore  Cargo.toml  README  README.md  log.txt  lox.duck
compiler/: Cargo.toml  logs.md  lox.duck
compiler/src/: main.rs
compiler/src/compiler/: mod.rs
rust-dyn-lox/parser/: Cargo.toml
rust-dyn-lox/parser/src/: expr.rs  lib.rs
rust-static-lox/: '  Cargo.toml  README  genaric.md  index.ts
rust-static-lox-typescript/parser/: Cargo.toml
rust-static-lox-typescript/parser/src/: expr.rs  lib.rs  parser_utils.rs
rust-static-lox/core/: Cargo.toml  duck.lox  index._ts  index.ts
rust-static-lox/core/lox/: duck.lox
rust-static-lox/core/src/: main.rs  runner.rs
rust-static-lox/core/tests/: match_declaration.lox  match_declarations.lox  variable_declarations.lox
rust-static-lox/diagnostic/: README
rust-static-lox/diagnostic/src/: diagnostic.rs  lib.rs  source_map.rs
rust-static-lox/diagnostic/src/types/: error.rs  warning.rs
rust-static-lox/diagnostic/tests/: complex_test.rs
rust-static-lox/lexer/: Cargo.toml  MISSING_TOKENS.md  todo.md
rust-static-lox/lexer/src/: lib.rs  scanner_utils.rs  token.rs
rust-static-lox/lexer/src/lexers/: arithmetic.rs  assignment_and_comparison.rs  bitwise_and_logical.rs  comment.rs  keywords.rs  lifetimes.rs  literal.rs  mod.rs  number.rs  punctuation_and_delimiters.rs  shebang.rs  special_operators.rs  string.rs
rust-static-lox/lexer/tests/: lexer_tests.rs
rust-static-lox/lexer/tests/files/: chars_bytes.lox  comments.lox  comments_nested.lox  identifiers.lox  integration_errors.lox  integration_valid.rs  keywords_ops.lox  lifetimes.lox  numbers.lox  numeric_suffix_errors.lox  operators.lox  prefix_errors.lox  shebang_invalid.lox  shebang_valid.lox  strings.lox  strings_valid.lox  unicode_whitespace.lox  unknown_tokens.lox  whitespace.lox
rust-static-lox/parser/: todo.md
rust-static-lox/parser/ast/: parser.rs
rust-static-lox/parser/src/: ast.rs  expr.rs  grammar  grammar.rs  lib.rs  macros.rs  old.rs  parser_utils.rs  stmt.rs
rust-static-lox/parser/src/ast/: generic.rs  item_print.rs  mod.rs  path.rs  pattern.rs  print_tree.rs  struct.rs
rust-static-lox/parser/src/ast/print/: item_print.rs  mod.rs  (+1 more)
rust-static-lox/parser/src/parsers/: array.rs  attribute.rs  bitwise.rs  block.rs  bool.rs  cast.rs  clousure.rs  comparison.rs  control_flow.rs  factor.rs  float.rs  fn.rs  generic.rs  grouped_expression.rs  identifier.rs  integer.rs  lifetime.rs  literal.rs  logical.rs  loop.rs  macro.rs  match.rs  mod.rs  mutability.rs  path.rs  pattern.rs  postfix.rs  range.rs  shift.rs  string.rs  struct.rs  term.rs  type.rs  unary.rs  variables.rs  visibility.rs  where.rs
rust-static-lox/parser/tests/: parser_tests.rs
semantic_analysis/: Cargo.toml
semantic_analysis/src/: resolver.rs
(+165 files in other folders)
