[package]
name = "compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
logger = { path = "../logger" }
lox = { path = "../lox" }
scanner = { path = "../scanner" }
parser = { path = "../parser" }

[dev-dependencies]



