[package]
name = "semantic_analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
parser = { path = "../parser" }
scanner= { path = "../scanner" }
diagnostic = { path = "../diagnostic" }
