[package]
name = "parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
diagnostic = { path = "../diagnostic" }
scanner = { path = "../scanner" }
uuid = { version = "1", features = ["serde", "v7"] }

