[package]
name = "parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
diagnostic = { path = "../diagnostic" }
lexer = { path = "../lexer" }
